# ToastMessage-LLroidMod

./: .gitignore  CMakeLists.txt  CONVERSION_REPORT.md  HOOK_REPORT.md  README.md  SIGNATURE_REPORT.md  TESTING_GUIDE.md  TROUBLESHOOTING.md
.github/workflows/: build.yml
scripts/: build.sh  clean.sh  package.ps1
src/: config_generator.cpp  main.cpp
src/android/: InputBridge.cpp  InputBridge.h
src/mod/: Config.cpp  Config.h  MyMod.cpp  MyMod.h
src/signatures/: Symbols.h
src/toast/: ToastBridge.cpp  ToastBridge.h  ToastTypes.h
src/ui/: ImGuiRenderer.cpp  ImGuiRenderer.h  Overlay.cpp  Overlay.h
src/util/: Logger.h  PreloaderOptional.cpp  PreloaderOptional.h
